; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_triangle-vulkan.c_demo_destroy_texture_image.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_triangle-vulkan.c_demo_destroy_texture_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demo = type { i32 }
%struct.texture_object = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demo*, %struct.texture_object*)* @demo_destroy_texture_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @demo_destroy_texture_image(%struct.demo* %0, %struct.texture_object* %1) #0 {
  %3 = alloca %struct.demo*, align 8
  %4 = alloca %struct.texture_object*, align 8
  store %struct.demo* %0, %struct.demo** %3, align 8
  store %struct.texture_object* %1, %struct.texture_object** %4, align 8
  %5 = load %struct.demo*, %struct.demo** %3, align 8
  %6 = getelementptr inbounds %struct.demo, %struct.demo* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.texture_object*, %struct.texture_object** %4, align 8
  %9 = getelementptr inbounds %struct.texture_object, %struct.texture_object* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @vkDestroyImage(i32 %7, i32 %10, i32* null)
  %12 = load %struct.demo*, %struct.demo** %3, align 8
  %13 = getelementptr inbounds %struct.demo, %struct.demo* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.texture_object*, %struct.texture_object** %4, align 8
  %16 = getelementptr inbounds %struct.texture_object, %struct.texture_object* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @vkFreeMemory(i32 %14, i32 %17, i32* null)
  ret void
}

declare dso_local i32 @vkDestroyImage(i32, i32, i32*) #1

declare dso_local i32 @vkFreeMemory(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
